src/event/2024-CCRS-VCMconference/assets/css/main.css
/* ... */
.tc-speakers {
  margin-top: 4rem;
}

.tc-speakers .row {
  row-gap: 2rem;
}

.tc-speaker {
  position: relative;
  padding: 1rem;
  height: 100%;
  background-color: #343a4099;
  box-shadow: 0 20px 13px #0001, 0 6px 5px #0003;
}

.tc-speaker__card {
  position: relative;
  margin: -1rem -1rem 1rem -1rem;
  aspect-ratio: 3 / 4;
  background-color: var(--bs-info);
  background-position: center;
  background-size: cover;
  background-position: center;
}

.tc-speaker__label {
  position: absolute;
  bottom: 0;
  left: 0;
  display: inline-block;
  padding: 0.125rem 1.5rem 0.125rem 0.75rem;
  border-top-right-radius: 100rem;
  background-color: #fff;
  color: var(--bs-primary);
}

.tc-speaker__open-icon {
  position: absolute;
  right: 0;
  bottom: -2.5rem;
  width: 6rem;
  height: 6rem;
  color: #f7ed76;
  transition: 0.15s all;
}
.tc-speaker:hover .tc-speaker__open-icon,
.tc-speaker:focus .tc-speaker__open-icon {
  right: -0.5rem;
  bottom: -1.5rem;
}

.tc-speaker__title {
  margin-bottom: 0.75rem;
  color: var(--bs-gray-200);
}
.tc-speaker__job-title {
  margin-bottom: 0.75rem;
  color: var(--bs-secondary);
}
.tc-speaker__name {
  margin-bottom: 0;
  text-shadow: 0 4px 3px #0003, 0 2px 2px #0006, 0 0 2px var(--bs-primary);
}
.tc-speaker__name a {
  text-decoration: none;
}

.tc-speaker-modal {
  --bs-modal-border-radius: 0;
  --bs-modal-border-width: 0;
  --bs-modal-padding: 0 2rem 2rem 2rem;
  --bs-modal-bg: var(--bs-primary);
}

.tc-speaker-modal .btn-close {
  --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
  --bs-btn-close-opacity: 0.75;
  --bs-btn-close-hover-opacity: 1;

  display: block;
  width: 3rem;
  height: 3rem;
  margin-left: auto;
  background-size: 1.75rem;
  /* color: #fff; */
}

.tc-speaker-modal .modal-content {
  box-shadow: 0 20px 13px #0001, 0 6px 5px #0003;
}

.tc-speaker-modal__body {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  column-gap: 1.5rem;
  row-gap: 1.5rem;
}

.tc-speaker-modal__body .tc-speaker__card {
  flex-shrink: 0;
  flex-grow: 0;
  width: 16rem;
  margin: 0 auto;
}

.tc-speaker__content {
  flex-grow: 1;
  color: #fff;
}

@media (max-width: 767px) {
  .tc-speaker-modal .modal-content {
    width: 100%;
    height: 100%;
  }

  .tc-speaker-modal__body {
    flex-direction: column;
    align-items: stretch;
  }
}

/************************************************
 * Agenda Section
 ************************************************/

.tc-section-agenda {
  padding-top: var(--tc-section-padding-top);
  padding-bottom: var(--tc-section-padding-bottom);
  background-image: radial-gradient(circle at center -50%, #49bbfd 0%, transparent 80%), linear-gradient(to bottom, #ace1ff, #ace1ffcc), url('../img/city.png');
  background-size: cover, cover, contain;
  background-position: center, center, bottom center;
  background-repeat: no-repeat;
  color: var(--bs-primary);
  overflow: hidden;
}
.tc-section-agenda .tc-section-header {
  --section-title-color: var(--bs-primary);
  --section-title-shadow: 0 4px 3px #6663, 0 2px 2px #6666;
}

.tc-agenda-table {
  --bs-table-bg: #fff3;
  --bs-table-border-color: #fff;
  --bs-table-color: var(--bs-primary);

  margin-top: 4rem;
  border: 1px solid #fff;
  -webkit-backdrop-filter: blur(12px);
          backdrop-filter: blur(12px);
}

.tc-agenda-table > :not(caption) > * > * {
  padding: 1rem 1rem;
}

.tc-agenda-table th:nth-of-type(1) {
  width: 12rem;
  text-align: center;
  vertical-align: middle;
}
.tc-agenda-table th:nth-of-type(2) {
  width: 10rem;
  text-align: center;
  vertical-align: middle;
  font-weight: normal;
  font-size: 1rem;
}

.tc-agenda-table__label {
  display: inline-block;
  padding: 0 1rem;
  margin-right: 0.5rem;
  border-radius: 0 1rem;
  background-color: var(--bs-secondary);
  color: #fff;
  font-size: 0.875em;
}

.tc-agenda-table__title {
  font-weight: bold;
}

.tc-agenda-table__speaker {
  margin-top: 1rem;
  margin-bottom: 1rem;
  line-height: 1.5;
}
.tc-agenda-table__speaker-section {
  display: block;
  margin-top: 1rem;
  font-size: 1rem;
  font-weight: 600;
}
.tc-agenda-table__name {
  display: block;
  color: var(--bs-warning);
  font-weight: 500;
}
.tc-agenda-table__job-title {
  display: block;
  font-size: 1rem;
}

.tc-agenda-table__speaker--inline {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

@media (min-width: 768px) {
  .tc-agenda-table__speaker--inline .tc-agenda-table__job-title::before {
    display: inline;
    content: '／';
  }
  .tc-agenda-table__speaker--inline .tc-agenda-table__name,
  .tc-agenda-table__speaker--inline .tc-agenda-table__job-title {
    display: inline;
  }
}

.tc-agenda__caption {
  margin-top: 4rem;
  text-align: center;
}

@media (max-width: 767px) {
  .tc-agenda-table > :not(caption) > * > * {
    padding: 0 1rem;
  }

  .tc-agenda-table th:nth-of-type(1) {
    display: inline-block;
    width: 75%;
    height: 3.5rem;
    border-bottom: none;
    text-align: left;
    line-height: 4rem;
  }
  .tc-agenda-table th:nth-of-type(2) {
    display: inline-block;
    width: 25%;
    height: 3.5rem;
    border-top: none;
    border-bottom: none;
    text-align: right;
    line-height: 4rem;
  }

  .tc-agenda-table td {
    display: block;
    border-top: none;
    padding-bottom: 1rem;
  }

  .tc-agenda-table__title {
    display: block;
    margin-top: 0.5rem;
    line-height: 1.5;
  }
}
/* ... */

